# Training3D

./: README.md
BasicSample/: CMakeLists.txt  Git.txt  RTTFragmentShader.frag  RTTVertexShader.vert  Readme.txt
BasicSample/Data/dotdreamstudio.com.training3d/files/Shader/: Cube_FS.glsl  Cube_VS.glsl  Light_FS.glsl  Light_VS.glsl
BasicSample/Shader/: 3DCoordinateSystems_FS.glsl  3DCoordinateSystems_VS.glsl  Cube_FS.glsl  Cube_VS.glsl  Light_FS.glsl  Light_VS.glsl  Line_VS.glsl  TextureTriangle_FS.glsl  TextureTriangle_VS.glsl
BasicSample/Source/: Camera.cpp  Camera.h  RendererES3.cpp  RendererES3.h  Shader.h  Std.h  Timer.cpp  Timer.h
BasicSample/Source/Native/: Native.cpp
BasicSample/Tool/BuildAndroid/: Build_FastBuild_Android.bat  fbuild.bff
BasicSample/Window/: HelloTriangle.cpp  MyWindow.cpp  MyWindow.h  TestMain.cpp
Dependencies/glew-2.1.0/: glew.pc
Dependencies/glew-2.1.0/install/lib/: glew32d.lib
Dependencies/glm-0.9.8.5/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  glm.sln
Dependencies/glm-0.9.8.5/glm/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  glm_dummy.vcxproj  glm_dummy.vcxproj.filters
Dependencies/glm-0.9.8.5/glm/Debug/: dummy.asm  glm_dummy.ilk
Dependencies/glm-0.9.8.5/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
Dependencies/glm-0.9.8.5/test/bug/: INSTALL.vcxproj  (+3 more)
Dependencies/soil/lib/: SOIL.lib
(+45 files in other folders)
